[package]
name = "rose-supply-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.5.16", default-features = false, features = ["json", "http2", "tower-log"] }
ethers = { version = "0.17.0", features = ["abigen", "rustls"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.1", features = ["rt-multi-thread", "macros", "time", "sync"] }
tower-http = { version = "0.3.4", features = ["cors", "limit", "trace"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["json"] }

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
